--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,28 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ornare convallis interdum. Nulla id vehicula nulla. Nulla imperdiet viverra lacinia. Phasellus vitae dolor in metus posuere pellentesque. Nulla eu aliquam est. Cras
                         maximus, libero nec dapibus sagittis, ipsum tellus iaculis nisi, sed dignissim elit magna vitae odio. Ut lobortis eleifend placerat. Duis dignissim eget magna sed commodo. Maecenas aliquam tincidunt lectus, vel imperdiet leo tempus
                         a.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ornare convallis interdum. Nulla id vehicula nulla. Nulla imperdiet viverra lacinia. Phasellus vitae dolor in metus posuere pellentesque. Nulla eu aliquam est. Cras
+                        maximus, libero nec dapibus sagittis, ipsum tellus iaculis nisi, sed dignissim elit magna vitae odio. Ut lobortis eleifend placerat. Duis dignissim eget magna sed commodo. Maecenas aliquam tincidunt lectus, vel imperdiet leo tempus
+                        a.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ornare convallis interdum. Nulla id vehicula nulla. Nulla imperdiet viverra lacinia. Phasellus vitae dolor in metus posuere pellentesque. Nulla eu aliquam est. Cras
+                        maximus, libero nec dapibus sagittis, ipsum tellus iaculis nisi, sed dignissim elit magna vitae odio. Ut lobortis eleifend placerat. Duis dignissim eget magna sed commodo. Maecenas aliquam tincidunt lectus, vel imperdiet leo tempus
+                        a.
+                    </p>
+                </div>
+                <button class="contentBtn" type="button">Кнопка</button>
+            </div>
+        </div>
+         <div class="product">
+            <button href="#" class="btn btn-main" id="2" data-popup='{"container":".content_2"}'>Вызов модального окна</button>
+            <div class="content_2 content hidden">
+                <h3 class="contentHeader">
+                    <a href="#">Контент</a>
+                </h3>
+                <div class="description">
+                    <img class="imageForPopup" src="./image.jpg" alt="perfume">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ornare convallis interdum. Nulla id vehicula nulla. Nulla imperdiet viverra lacinia. Phasellus vitae dolor in metus posuere pellentesque. Nulla eu aliquam est. Cras
+                        maximus, libero nec dapibus sagittis, ipsum tellus iaculis nisi, sed dignissim elit magna vitae odio. Ut lobortis eleifend placerat. Duis dignissim eget magna sed commodo. Maecenas aliquam tincidunt lectus, vel imperdiet leo tempus
+                        a.                       
                     </p>
                 </div>
                 <button class="contentBtn" type="button">Кнопка</button>
